--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>💚Angeliki's Personal site</title>
+    <link rel="stylesheet" href="css\stlyes.css">
   </head>
   <body style="background-color: #EAF6F6;">
     <table cellspacing="20">
       <tr>
-        <td><img src="C:\Users\Angeliki\Desktop\WebDevelopmentAtom\images\circle-cropped.png" alt="angeliki profile image"></td>
+        <td><img src="images\circle-cropped.png" alt="angeliki profile image"></td>
         <td><h1>Angeliki Tri</h1>
         <p><em>Web development <strong>student</strong></em></p>
         <p>I am a University student on Italian Literature, and an aspiring Web developer and programmer. I also ❤♥love drinking my coffee while reading a favorite book!</p></td>
