--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>💚Angeliki's Personal site</title>
-    <link rel="stylesheet" href="css\stlyes.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body style="background-color: #EAF6F6;">
     <table cellspacing="20">
