--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>💚Angeliki's Personal site</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body style="background-color: #EAF6F6;">
+  <body>
     <table cellspacing="20">
       <tr>
         <td><img src="images\circle-cropped.png" alt="angeliki profile image"></td>
